--- a/templates/notes/index.html
+++ b/templates/notes/index.html
@@ -16,6 +16,7 @@
     <div class="container">
         {% block main %}
         <h1>Notes</h1>
+        <h2>Cookie: <small>{{ cookie }}</small></h2>
         {% end %}
     </div>
 </body>
