--- a/templates/notes/index.html
+++ b/templates/notes/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" ng-app="myModule">
 <head>
     <meta charset="UTF-8">
     <title>{% block title %} Notes: Main {% end %}</title>
@@ -16,8 +16,14 @@
     <div class="container">
         {% block main %}
         <h1>Notes</h1>
-        <h2>Cookie: <small>{{ cookie }}</small></h2>
+        <div class="row" ng-controller="MyCtrl">
+            <p>{( items.name )}</p>
+            <p>{( items.age )}</p>
         {% end %}
+        </div>
     </div>
+    <script src="{{ static_url('lib/angular/angular.min.js') }}"></script>
+    <script src="{{ static_url('js/app/app.js') }}"></script>
+
 </body>
 </html>
