--- a/templates/notes/login.html
+++ b/templates/notes/login.html
@@ -1,14 +1,15 @@
 {% extends 'index.html' %}
 {% block title %} Notes: Login {% end %}
 {% block main %}
-     <div class="col-md-4 col-md-offset-4">
+     <div class="col-md-4 col-md-offset-4" ng-controller="LoginCtrl">
 
-      <form class="form-signin">
+      <form class="form-signin" method="POST" action="/auth">
         <h2 class="form-signin-heading">Notes service</h2>
         <label for="inputEmail" class="sr-only">Email address</label>
-        <input type="email" id="inputEmail" class="form-control" placeholder="Email address" required autofocus>
+        <input type="email" id="inputEmail" class="form-control" ng-model="user.email" name="email" placeholder="Email address" required autofocus>
         <label for="inputPassword" class="sr-only">Password</label>
-        <input type="password" id="inputPassword" class="form-control" placeholder="Password" required>
+        <input type="password" id="inputPassword" class="form-control" name="password" placeholder="Password" required>
+        <input type="text" ng-model="user.name" placeholder="Name" class="form-control">
         <div class="checkbox">
           <label>
             <input type="checkbox" value="remember-me"> Remember me
@@ -16,6 +17,12 @@
         </div>
         <button class="btn btn-lg btn-primary btn-block" type="submit">Sign in</button>
       </form>
-
+      <p>{( user.name )}</p>
+      <ul>
+        <li ng-repeat="item in items" ng-class="$even?'odd':'even'">
+          {( $index )} -  {( item.name )}
+        </li>
+      </ul>
     </div> <!-- /container -->
+
 {% end %}
