--- a/templates/notes/index.html
+++ b/templates/notes/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="myModule">
+<html lang="en" ng-app="test">
 <head>
     <meta charset="UTF-8">
     <title>{% block title %} Notes: Main {% end %}</title>
@@ -19,11 +19,14 @@
         <div class="row" ng-controller="MyCtrl">
             <p>{( items.name )}</p>
             <p>{( items.age )}</p>
+            <h4>Cookie: {( user )}</h4>
         {% end %}
         </div>
     </div>
     <script src="{{ static_url('lib/angular/angular.min.js') }}"></script>
+    <script src="{{ static_url('lib/angular-resource/angular-resource.min.js') }}"></script>
     <script src="{{ static_url('js/app/app.js') }}"></script>
-
+    <script src="{{ static_url('js/app/controllers/testController.js') }}"></script>
+    <script src="{{ static_url('js/app/controllers/loginController.js') }}"></script>
 </body>
 </html>
