--- a/templates/notes/login.html
+++ b/templates/notes/login.html
@@ -1,7 +1,7 @@
 {% extends 'index.html' %}
 {% block title %} Notes: Login {% end %}
 {% block main %}
-     <div class="col-md-4 col-md-offset-4" ng-controller="LoginCtrl">
+     <div class="col-md-4 col-md-offset-4">
 
       <form class="form-signin" method="POST" action="/auth">
         <h2 class="form-signin-heading">Notes service</h2>
@@ -24,5 +24,9 @@
         </li>
       </ul>
     </div> <!-- /container -->
+
+    <div class="row" ng-controller="testController">
+      <span></span>
+    </div>
 
 {% end %}
